--- a/app/assets/stylesheets/chat.css.scss
+++ b/app/assets/stylesheets/chat.css.scss
@@ -99,7 +99,10 @@
   background-color: cornflowerblue;
   border-radius: 5px;
 }
-
+#pop
+{
+  margin: 0 auto;
+}
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #F5F5F5;
