--- a/app/views/message/_dialog.html.haml
+++ b/app/views/message/_dialog.html.haml
@@ -10,7 +10,7 @@
           -if message.user_id==current_user.id
             %li.from.clearfix
               %span.chat-img.pull-left
-                =image_tag avatar_url(message.user,50),:class => "avatar"
+                =image_tag avatar_url(message.user, 50),:class => "avatar"
               .chat-body.clearfix
                 .header
                   %strong.primary-font
@@ -24,7 +24,7 @@
           -else
             %li.to.clearfix
               %span.chat-img.pull-left
-                =image_tag avatar_url(message.user,50),:class => "avatar"
+                =image_tag avatar_url(message.user, 50),:class => "avatar"
               .chat-body.clearfix
                 .header
                   %strong.primary-font
@@ -52,7 +52,7 @@
               %label.upload-but{:for => "attach_path"}
                 %span.glyphicon.glyphicon-paperclip
             %td{:width => "1%"}
-              %button.form-but#send_message{:type => "button"}
+              %div.form-but.upload-but
                 -smile=render "layouts/index"
                 %span.glyphicon.glyphicon-thumbs-up#pop{"data-container" => "body",
                                                         "data-content" => smile,
