--- a/app/views/rooms/create.js.erb
+++ b/app/views/rooms/create.js.erb
@@ -1,1 +1,2 @@
+$('.left').html("<%= escape_javascript render :partial => 'layouts/rooms_list'%>");
 $('#room_list').html("<%= escape_javascript render :partial => 'rooms/show_rooms_list'%>");
