--- a/app/views/rooms/_show_rooms_list.html.haml
+++ b/app/views/rooms/_show_rooms_list.html.haml
@@ -13,8 +13,7 @@
           ="Owned by: "
           =link_to "#{room.user.login}", user_path(room.user.id)
         %td.set-arr
-          %a{href: "#"}
-            %span.glyphicon.glyphicon-cog
-            %span.glyphicon.glyphicon-chevron-down
+          -if room.user.login==current_user.login
+            %span.delete_room.glyphicon.glyphicon-remove-circle{:data=>{:id=>room.id}}
 
 
