delete room with pusher

--- a/app/views/rooms/_show_rooms_list.html.haml
+++ b/app/views/rooms/_show_rooms_list.html.haml
@@ -1,7 +1,7 @@
 %h2.public OPEN ROOMS
 - if !@room_list.nil?
   - @room_list.each do |room|
-    %table.rooms_group
+    %table.rooms_group{:data=>{:room=>room.id}}
       %tr
         %td.name
           %a.clean
