--- a/app/views/rooms/index.html.haml
+++ b/app/views/rooms/index.html.haml
@@ -3,7 +3,7 @@
   .lobby-header
     %h1.pull-left
       ="#{current_user.login} Rooms"
-    %button.btn.btn-primary.lobby-btn{"data-target" => "#myModal", "data-toggle" => "modal"}Create Room
+    %button#createRoom.btn.btn-primary.lobby-btn{"data-target" => "#myModal", "data-toggle" => "modal"}Create Room
     #myModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "myModalLabel", role: "dialog", tabindex: "-1"}
       .modal-dialog
         .modal-content
