--- a/app/views/message/_dialog.html.haml
+++ b/app/views/message/_dialog.html.haml
@@ -46,13 +46,13 @@
               .textwrapper
                 = f.text_area :body , :class => "form-control", :id=>"message", :autocomplete => "off"
             %td.up-pl-wrap{:width => "10%"}
-              %span.glyphicon.glyphicon-ok.ok
+              %span.glyphicon.glyphicon-ok.ok#lineh
               %label.upload-place
                 = f.file_field :attach_path ,:id=>"attach_path"
             %td{:width => "1%"}
               = f.hidden_field :room_id, :value=>@room_id
               %label.upload-but{:for => "attach_path"}
-                %span.glyphicon.glyphicon-paperclip
+                %span.glyphicon.glyphicon-paperclip#lineh
             %td{:width => "1%"}
               %div.form-but.upload-but
                 -smile=render "layouts/index"
