--- a/app/assets/stylesheets/lobby.css
+++ b/app/assets/stylesheets/lobby.css
@@ -536,6 +536,7 @@ h2.public{
     border: medium none;
     font-size: 12px;
     max-height: 100%;
+    height: 100%;
     padding: 0;
     width: 100%;
 }
@@ -551,7 +552,10 @@ h2.public{
     margin-left: 5px;
     padding: 0 13px;
 }
-
+#lineh
+{
+    line-height: 56px;
+}
 .kick_user {
     margin-left: 15px;
 }
