--- a/app/views/message/_dialog.html.haml
+++ b/app/views/message/_dialog.html.haml
@@ -56,7 +56,7 @@
             %td{:width => "1%"}
               %div.form-but.upload-but
                 -smile=render "layouts/index"
-                %span.glyphicon.glyphicon-thumbs-up#pop{"data-container" => "body",
+                %span.icon-smile#pop{"data-container" => "body",
                                                         "data-content" => smile,
                                                         "data-placement" => "top",
                                                         "data-toggle" => "popover", type: "button"}
