--- a/app/views/message/_dialog.html.haml
+++ b/app/views/message/_dialog.html.haml
@@ -62,6 +62,8 @@
                                                         "data-toggle" => "popover", type: "button"}
     -#%ul
     -#  =render "layouts/index"
+    -#FIXME remove
 %audio#new-message
   %source{:src=>"../sounds/button_tiny.ogg", :type=>"audio/ogg"}
   %source{:src=>"../sounds/button_tiny.mp3", :type=>"audio/mp3"}
+  -#FIXME wat?
