Background uploads path fixed

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,6 @@
     = stylesheet_link_tag "application", media: "all"
     = csrf_meta_tags
     = javascript_include_tag "application"
-  %body{:style=>("background-image:url('../background/#{background_image()}');" unless user_signed_in?)}
+  -#%body{:style=>("background-image:url('../background/#{background_image()}');" unless user_signed_in?)}
+  %body
     = yield
