--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -2,7 +2,7 @@
   %li
     = link_to 'Users', users_path
   %li.dropdown.user-dropdown
-    %a.dropdown-toggle{:href=>"#",:data=>{:toggle=>"dropdown"}}
+    %a.dropdown-toggle{:data=>{:toggle=>"dropdown"}}
       %i.fa.fa-user
       =current_user.firstname
       %b.caret
