--- a/app/assets/stylesheets/lobby.css
+++ b/app/assets/stylesheets/lobby.css
@@ -443,7 +443,7 @@ h2.public{
 
 /********/
 .top-alert{
-    height: 32px;
+    height: 35px;
     margin-top: 0;
     top: 0;
     left: 200px;
@@ -454,10 +454,12 @@ h2.public{
     padding: 0px;
     font: 14px Verdana;
     color: #000;
-    z-index: 100;
+    z-index: 10;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis !important;
+    background-color: #F5F5F5;
+    border: none;
 }
 .input {
     background: #697686;
@@ -573,4 +575,16 @@ span.glyphicon.glyphicon-remove:hover{
 .delete_room
 {
     cursor: pointer;
+}
+.change-topic
+{
+    width: 250px;
+    left: auto;
+    right:26px;
+    top:-26px;
+    border-radius: 0;
+    background: #697686;
+    padding: 1px;
+    position: absolute;
+    z-index: 500;
 }
