--- a/app/views/message/_dialog.html.haml
+++ b/app/views/message/_dialog.html.haml
@@ -1,6 +1,13 @@
 .content
   .alert.alert-success.top-alert
-    %input.form-control#search{:placeholder=>"Search..."}
+    -#%input.form-control#search{:placeholder=>"Search..."}
+    %h3.room_topic #{@room.topic}
+    .dropdown
+      %span#drop1.change_topic.glyphicon.glyphicon-pencil{"data-toggle"=>"dropdown"}
+      %form.dropdown-menu.search-form.change-topic{:action => "", "aria-labelledby" => "drop3", :method => "post", :role => "menu"}
+        %input{:name => "change",:id=>'change', :placeholder => "Change topic", :type => "search"}
+          %button{:type => "submit"}
+            %span.glyphicon.glyphicon-record
   .chat
     .pag
       .glyphicon.glyphicon-chevron-up
