--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -17,10 +17,9 @@
   - @possible_friends.each do |user|
     %table.rooms_group
       %tr{:friend_id => user.id}
-        %td
+        %td.name
           .friend_photo
             = image_tag avatar_url(user,50),:class => "avatar"
-          .friend_name
-          = link_to "#{user.firstname} #{user.lastname}", user_path(user.id)
+          = link_to "#{user.login}", user_path(user.id)
         %td.friend_action.add_friend
           %span{:class => "glyphicon glyphicon-plus add_new_friend"}
