--- a/app/views/layouts/_rooms_list.html.haml
+++ b/app/views/layouts/_rooms_list.html.haml
@@ -52,7 +52,7 @@
           = link_to destroy_user_session_path, :method=>'delete', :tabindex => "-1" do
             %span.glyphicon.glyphicon-share-alt.drop-col-mar>
             Sign out
-    %a.glyphicon.glyphicon-cog{:href=>"/persons"}
+    %a.glyphicon.glyphicon-cog{:href=>edit_user_registration_path}
 %aside.right_panel
   .top-form
     .dropdown
