--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
  *= require backgrounds
  *= require bootstrap
  *= require chat
+ *= require sprite
  *= require emoji
  *= require errors
  *= require framework_and_overrides
