--- a/app/views/layouts/_index.html.haml
+++ b/app/views/layouts/_index.html.haml
@@ -1,307 +1,188 @@
 .bla
-%p
-  \:bowtie:
-  \:smile:
-  \:laughing:
-  \:blush:
-  \:smiley:
-  \:relaxed:
-  \:smirk:
-  \:heart_eyes:
-  \:kissing_heart:
-  \:kissing_closed_eyes:
-  \:flushed:
-  \:relieved:
-  \:satisfied:
-  \:grin:
-  \:wink:
-  \:wink2:
-  \:stuck_out_tongue_winking_eye:
-  \:stuck_out_tongue_closed_eyes:
-  \:grinning:
-  \:kissing:
-  \:kissing_smiling_eyes:
-  \:stuck_out_tongue:
-  \:sleeping:
-  \:worried:
-  \:frowning:
-  \:anguished:
-  \:open_mouth:
-  \:grimacing:
-  \:confused:
-  \:hushed:
-  \:expressionless:
-  \:unamused:
-  \:sweat_smile:
-  \:sweat:
-  \:weary:
-  \:pensive:
-  \:disappointed:
-  \:confounded:
-  \:fearful:
-  \:cold_sweat:
-  \:persevere:
-  \:cry:
-  \:sob:
-  \:joy:
-  \:astonished:
-  \:scream:
-  \:neckbeard:
-  \:tired_face:
-  \:angry:
-  \:rage:
-  \:triumph:
-  \:sleepy:
-  \:yum:
-  \:mask:
-  \:sunglasses:
-  \:dizzy_face:
-  \:imp:
-  \:smiling_imp:
-  \:neutral_face:
-  \:no_mouth:
-  \:innocent:
-  \:alien:
-  \:yellow_heart:
-  \:blue_heart:
-  \:purple_heart:
-  \:heart:
-  \:green_heart:
-  \:broken_heart:
-  \:heartbeat:
-  \:heartpulse:
-  \:two_hearts:
-  \:revolving_hearts:
-  \:cupid:
-  \:sparkling_heart:
-  \:sparkles:
-  \:star:
-  \:star2:
-  \:dizzy:
-  \:boom:
-  \:collision:
-  \:anger:
-  \:exclamation:
-  \:question:
-  \:grey_exclamation:
-  \:grey_question:
-  \:zzz:
-  \:dash:
-  \:sweat_drops:
-  \:notes:
-  \:musical_note:
-  \:fire:
-  \:hankey:
-  \:+1:
-  \:-1:
-  \:ok_hand:
-  \:facepunch:
-  \:fist:
-  \:v:
-  \:wave:
-  \:hand:
-  \:open_hands:
-  \:point_up:
-  \:point_down:
-  \:point_left:
-  \:point_right:
-  \:raised_hands:
-  \:pray:
-  \:point_up_2:
-  \:clap:
-  \:muscle:
-  \:metal:
-  \:walking:
-  \:runner:
-  \:running:
-  \:couple:
-  \:family:
-  \:two_men_holding_hands:
-  \:two_women_holding_hands:
-  \:dancer:
-  \:dancers:
-  \:ok_woman:
-  \:no_good:
-  \:information_desk_person:
-  \:raised_hand:
-  \:bride_with_veil:
-  \:person_with_pouting_face:
-  \:person_frowning:
-  \:bow:
-  \:couplekiss:
-  \:couple_with_heart:
-  \:massage:
-  \:haircut:
-  \:nail_care:
-  \:boy:
-  \:girl:
-  \:woman:
-  \:man:
-  \:baby:
-  \:older_woman:
-  \:older_man:
-  \:person_with_blond_hair:
-  \:man_with_gua_pi_mao:
-  \:man_with_turban:
-  \:construction_worker:
-  \:cop:
-  \:angel:
-  \:princess:
-  \:smiley_cat:
-  \:smile_cat:
-  \:heart_eyes_cat:
-  \:kissing_cat:
-  \:smirk_cat:
-  \:scream_cat:
-  \:crying_cat_face:
-  \:joy_cat:
-  \:pouting_cat:
-  \:japanese_ogre:
-  \:japanese_goblin:
-  \:see_no_evil:
-  \:hear_no_evil:
-  \:speak_no_evil:
-  \:guardsman:
-  \:skull:
-  \:feet:
-  \:lips:
-  \:kiss:
-  \:droplet:
-  \:ear:
-  \:eyes:
-  \:nose:
-  \:tongue:
-  \:love_letter:
-  \:bust_in_silhouette:
-  \:busts_in_silhouette:
-  \:speech_balloon:
-  \:thought_balloon:
-  \:feelsgood:
-  \:finnadie:
-  \:goberserk:
-  \:godmode:
-  \:hurtrealbad:
-  \:rage1:
-  \:rage2:
-  \:rage3:
-  \:rage4:
-  \:suspect:
-  \:trollface:
-%p
-  \:sunny:
-  \:umbrella:
-  \:cloud:
-  \:snowflake:
-  \:snowman:
-  \:zap:
-  \:cyclone:
-  \:foggy:
-  \:ocean:
-  \:cat:
-  \:dog:
-  \:mouse:
-  \:hamster:
-  \:rabbit:
-  \:wolf:
-  \:frog:
-  \:tiger:
-  \:koala:
-  \:bear:
-  \:pig:
-  \:pig_nose:
-  \:cow:
-  \:boar:
-  \:monkey_face:
-  \:monkey:
-  \:horse:
-  \:racehorse:
-  \:camel:
-  \:sheep:
-  \:elephant:
-  \:panda_face:
-  \:snake:
-  \:bird:
-  \:baby_chick:
-  \:hatched_chick:
-  \:hatching_chick:
-  \:chicken:
-  \:penguin:
-  \:turtle:
-  \:bug:
-  \:honeybee:
-  \:ant:
-  \:beetle:
-  \:snail:
-  \:octopus:
-  \:tropical_fish:
-  \:fish:
-  \:whale:
-  \:whale2:
-  \:dolphin:
-  \:cow2:
-  \:ram:
-  \:rat:
-  \:water_buffalo:
-  \:tiger2:
-  \:rabbit2:
-  \:dragon:
-  \:goat:
-  \:rooster:
-  \:dog2:
-  \:pig2:
-  \:mouse2:
-  \:ox:
-  \:dragon_face:
-  \:blowfish:
-  \:crocodile:
-  \:dromedary_camel:
-  \:leopard:
-  \:cat2:
-  \:poodle:
-  \:paw_prints:
-  \:bouquet:
-  \:cherry_blossom:
-  \:tulip:
-  \:four_leaf_clover:
-  \:rose:
-  \:sunflower:
-  \:hibiscus:
-  \:maple_leaf:
-  \:leaves:
-  \:fallen_leaf:
-  \:herb:
-  \:mushroom:
-  \:cactus:
-  \:palm_tree:
-  \:evergreen_tree:
-  \:deciduous_tree:
-  \:chestnut:
-  \:seedling:
-  \:blossom:
-  \:ear_of_rice:
-  \:shell:
-  \:globe_with_meridians:
-  \:sun_with_face:
-  \:full_moon_with_face:
-  \:new_moon_with_face:
-  \:new_moon:
-  \:waxing_crescent_moon:
-  \:first_quarter_moon:
-  \:waxing_gibbous_moon:
-  \:full_moon:
-  \:waning_gibbous_moon:
-  \:last_quarter_moon:
-  \:waning_crescent_moon:
-  \:last_quarter_moon_with_face:
-  \:first_quarter_moon_with_face:
-  \:moon:
-  \:earth_africa:
-  \:earth_americas:
-  \:earth_asia:
-  \:volcano:
-  \:milky_way:
-  \:partly_sunny:
-  \:octocat:
-  \:squirrel:
-:javascript
-  emojify.run();
+  %p
+  .emoji
+    .sprite-1#:1:
+    .sprite--1#:be:
+    .sprite-alien#:alien:
+    .sprite-angel#:angel:
+    .sprite-anger#:anger:
+    .sprite-angry#:angry:
+    .sprite-anguished#:anguished:
+    .sprite-astonished#:astonished:
+    .sprite-baby#:baby:
+    .sprite-blue-heart#:blue_heart:
+    .sprite-blush#:blush:
+    .sprite-boom#:boom:
+    .sprite-bow#:bow:
+    .sprite-bowtie#:bowtie:
+    .sprite-boy#:boy:
+    .sprite-bride-with-veil#:bride_with_veil:
+    .sprite-broken-heart#:broken_heart:
+    .sprite-bust-in-silhouette#:bust_in_silhouette:
+    .sprite-busts-in-silhouette#:busts_in_silhouette:
+    .sprite-clap#:clap:
+    .sprite-cold-sweat#:cold_sweat:
+    .sprite-collision#:collision:
+    .sprite-confounded#:confounded:
+    .sprite-confused#:confused:
+    .sprite-construction-worker#:construction_worker:
+    .sprite-cop#:cop:
+    .sprite-couple#:couple:
+    .sprite-couple-with-heart#:couple_with_heart:
+    .sprite-couplekiss#:couplekiss:
+    .sprite-cry#:cry:
+    .sprite-crying-cat-face#:crying_cat_face:
+    .sprite-cupid#:cupid:
+    .sprite-dancer#:dancer:
+    .sprite-dancers#:dancers:
+    .sprite-dash#:dash:
+    .sprite-disappointed#:disappointed:
+    .sprite-dizzy#:dizzy:
+    .sprite-dizzy-face#:dizzy_face:
+    .sprite-droplet#:droplet:
+    .sprite-ear#:ear:
+    .sprite-exclamation#:exclamation:
+    .sprite-expressionless#:expressionless:
+    .sprite-eyes#:eyes:
+    .sprite-facepunch#:facepunch:
+    .sprite-family#:family:
+    .sprite-fearful#:fearful:
+    .sprite-feelsgood#:feelsgood:
+    .sprite-feet#:feet:
+    .sprite-finnadie#:finnadie:
+    .sprite-fire#:fire:
+    .sprite-fist#:fist:
+    .sprite-flushed#:flushed:
+    .sprite-frowning#:frowning:
+    .sprite-fu#:fu:
+    .sprite-girl#:girl:
+    .sprite-goberserk#:goberserk:
+    .sprite-godmode#:godmode:
+    .sprite-green-heart#:green_heart:
+    .sprite-grimacing#:grimacing:
+    .sprite-grin#:grin:
+    .sprite-grinning#:grinning:
+    .sprite-guardsman#:guardsman:
+    .sprite-haircut#:haircut:
+    .sprite-hand#:hand:
+    .sprite-hankey#:hankey:
+    .sprite-hear-no-evil#:hear_no_evil:
+    .sprite-heart#:heart:
+    .sprite-heart-eyes#:heart_eyes:
+    .sprite-heart-eyes-cat#:heart_eyes_cat:
+    .sprite-heartbeat#:heartbeat:
+    .sprite-heartpulse#:heartpulse:
+    .sprite-hurtrealbad#:hurtrealbad:
+    .sprite-hushed#:hushed:
+    .sprite-imp#:imp:
+    .sprite-information-desk-person#:information_desk_person:
+    .sprite-innocent#:innocent:
+    .sprite-japanese-goblin#:japanese_goblin:
+    .sprite-japanese-ogre#:japanese_ogre:
+    .sprite-joy#:joy:
+    .sprite-joy-cat#:joy_cat:
+    .sprite-kiss#:kiss:
+    .sprite-kissing#:kissing:
+    .sprite-kissing-cat#:kissing_cat:
+    .sprite-kissing-closed-eyes#:kissing_closed_eyes:
+    .sprite-kissing-face#:kissing_face:
+    .sprite-kissing-heart#:kissing_heart:
+    .sprite-kissing-smiling-eyes#:kissing_smiling_eyes:
+    .sprite-laughing#:laughing:
+    .sprite-lips#:lips:
+    .sprite-love-letter#:love_letter:
+    .sprite-man#:man:
+    .sprite-man-with-gua-pi-mao#:man_with_gua_pi_mao:
+    .sprite-man-with-turban#:man_with_turban:
+    .sprite-mask#:mask:
+    .sprite-massage#:massage:
+    .sprite-metal#:metal:
+    .sprite-muscle#:muscle:
+    .sprite-musical-note#:musical_note:
+    .sprite-nail-care#:nail_care:
+    .sprite-neckbeard#:neckbeard:
+    .sprite-neutral-face#:neutral_face:
+    .sprite-no-good#:no_good:
+    .sprite-no-mouth#:no_mouth:
+    .sprite-nose#:nose:
+    .sprite-notes#:notes:
+    .sprite-ok-hand#:ok_hand:
+    .sprite-ok-woman#:ok_woman:
+    .sprite-older-man#:older_man:
+    .sprite-older-woman#:older_woman:
+    .sprite-open-hands#:open_hands:
+    .sprite-open-mouth#:open_mouth:
+    .sprite-pensive#:pensive:
+    .sprite-persevere#:persevere:
+    .sprite-person-frowning#:person_frowning:
+    .sprite-person-with-blond-hair#:person_with_blond_hair:
+    .sprite-person-with-pouting-face#:person_with_pouting_face:
+    .sprite-point-down#:point_down:
+    .sprite-point-left#:point_left:
+    .sprite-point-right#:point_right:
+    .sprite-point-up#:point_up:
+    .sprite-point-up-2#:point_up_2:
+    .sprite-pouting-cat#:pouting_cat:
+    .sprite-pray#:pray:
+    .sprite-princess#:princess:
+    .sprite-purple-heart#:purple_heart:
+    .sprite-question#:question:
+    .sprite-rage#:rage:
+    .sprite-rage2#:rage2:
+    .sprite-rage3#:rage3:
+    .sprite-rage4#:rage4:
+    .sprite-raised-hand#:raised_hand:
+    .sprite-raised-hands#:raised_hands:
+    .sprite-relaxed#:relaxed:
+    .sprite-relieved#:relieved:
+    .sprite-revolving-hearts#:revolving_hearts:
+    .sprite-runner#:runner:
+    .sprite-running#:running:
+    .sprite-satisfied#:satisfied:
+    .sprite-scream#:scream:
+    .sprite-scream-cat#:scream_cat:
+    .sprite-see-no-evil#:see_no_evil:
+    .sprite-skull#:skull:
+    .sprite-sleeping#:sleeping:
+    .sprite-sleepy#:sleepy:
+    .sprite-smile-cat#:smile_cat:
+    .sprite-smiley#:smiley:
+    .sprite-smiley-cat#:smiley_cat:
+    .sprite-smiling-imp#:smiling_imp:
+    .sprite-smirk#:smirk:
+    .sprite-smirk-cat#:smirk_cat:
+    .sprite-sob#:sob:
+    .sprite-sparkles#:sparkles:
+    .sprite-sparkling-heart#:sparkling_heart:
+    .sprite-speak-no-evil#:speak_no_evil:
+    .sprite-speech-balloon#:speech_balloon:
+    .sprite-star#:star:
+    .sprite-star2#:star2:
+    .sprite-stuck-out-tongue#:stuck_out_tongue:
+    .sprite-stuck-out-tongue-closed-eyes#:stuck_out_tongue_closed_eyes:
+    .sprite-stuck-out-tongue-winking-eye#:stuck_out_tongue_winking_eye:
+    .sprite-sunglasses#:sunglasses:
+    .sprite-suspect#:suspect:
+    .sprite-sweat#:sweat:
+    .sprite-sweat-drops#:sweat_drops:
+    .sprite-sweat-smile#:sweat_smile:
+    .sprite-thought-balloon#:thought_balloon:
+    .sprite-tired-face#:tired_face:
+    .sprite-tongue#:tongue:
+    .sprite-triumph#:triumph:
+    .sprite-trollface#:trollface:
+    .sprite-two-hearts#:two_hearts:
+    .sprite-two-men-holding-hands#:two_men_holding_hands:
+    .sprite-two-women-holding-hands#:two_women_holding_hands:
+    .sprite-unamused#:unamused:
+    .sprite-v#:v:
+    .sprite-walking#:walking:
+    .sprite-wave#:wave:
+    .sprite-weary#:weary:
+    .sprite-wink#:wink:
+    .sprite-wink2#:wink2:
+    .sprite-woman#:woman:
+    .sprite-worried#:worried:
+    .sprite-yellow-heart#:yellow_heart:
+    .sprite-yum#:yum:
+    .sprite-zzz#:zzz:
