--- a/app/views/message/_dialog.html.haml
+++ b/app/views/message/_dialog.html.haml
@@ -21,9 +21,9 @@
               .chat-body.clearfix
                 .header
                   %strong.primary-font
-                    =(message.user) ? (link_to message.user.login, user_path(message.user.id)) : "chat notification"
+                    =(message.user) ? (link_to message.user.login, user_path(message.user.login)) : "chat notification"
                   %small.pull-right.text-muted
-                    %span.glyphicon.glyphicon-time
+                    %span.glyphicon.glyphicon-time>
                     =message.created_at.strftime("%a %T")
                 %p= message.body
                 -if message.attach_path?
@@ -36,9 +36,9 @@
               .chat-body.clearfix
                 .header
                   %strong.primary-font
-                    =(message.user) ? (link_to message.user.login, user_path(message.user.id)) : "chat notification"
+                    =(message.user) ? (link_to message.user.login, user_path(message.user.login)) : "chat notification"
                   %small.pull-right.text-muted
-                    %span.glyphicon.glyphicon-time
+                    %span.glyphicon.glyphicon-time>
                     =message.created_at.strftime("%a %T")
                 %p=message.body
                 -if message.attach_path?
