--- a/app/views/layouts/_rooms_list.html.haml
+++ b/app/views/layouts/_rooms_list.html.haml
@@ -62,24 +62,60 @@
         %form.dropdown-menu.search-form{"aria-labelledby" => "drop3", :method => "get", :role => "menu"}
           %input#search{:placeholder=>"Search", :type => "search"}
   - if @room_users != nil
-    .list
-      - @room_users.each do |user|
-        .member{:id=>user.id,:data=>{:toggle=>"tooltip",:user_id => user.id, :room_id => @room.id}, :title=>"#{user.user_status=="Offline" ? "Offline "+time_ago_in_words(user.updated_at) : user.user_status}"}
-          %span{:class=>get_user_status_style(user.user_status)}
-          = link_to "#{user.login}", "#"
-    .friend-list.right_search_user
-      #panel1.panel.panel-default
-        .panel-heading
-          %p
-            Add new friends
-            %h4.collapsed{"data-target" => "#collapseTwo", "data-toggle" => "collapse"}
-        #collapseTwo.panel-collapse.collapse
-          %input#search-user.form-control{:placeholder=>"Enter email",:width=>"70%"}
-          .panel-body.right_search
-            - current_user.friends.each do |friend|
-              .member
-                = link_to user_path(friend.login) do
-                  %span{:class=>get_user_status_style(friend.user_status)}>
-                  = "#{friend.login}"
-                %span.glyphicon.glyphicon-plus.pull-right.user_friend{:data=>{:user_id => friend.id}}
+    .tabbable
+      %ul.nav.nav-tabs
+        %li.active
+          %a{"data-toggle" => "tab", :href => "#pane1"} Users
+        %li
+          %a{"data-toggle" => "tab", :href => "#pane2"} Files
+        %li
+          %a{"data-toggle" => "tab", :href => "#pane3"} Links
+      .tab-content
+        #pane1.tab-pane.active
+          .list
+            - @room_users.each do |user|
+              .member{:data=>{:toggle=>"tooltip",:user_id => user.id, :room_id => @room.id}, :title=>"#{user.user_status=="Offline" ? "Offline "+time_ago_in_words(user.updated_at) : user.user_status}"}
+                %span{:class=>get_user_status_style(user.user_status)}
+                = link_to "#{user.login}", "#"
+          .friend-list.right_search_user
+            #panel1.panel.panel-default
+              .panel-heading
+                %p
+                  Add new friends
+                  %h4.collapsed{"data-target" => "#collapseTwo", "data-toggle" => "collapse"}
+              #collapseTwo.panel-collapse.collapse
+                %input#search-user.form-control{:placeholder=>"Search...",:width=>"70%"}
+                .panel-body.right_search
+                  - current_user.friends.each do |friend|
+                    .member
+                      = link_to user_path(friend.login) do
+                        %span{:class=>get_user_status_style(friend.user_status)}>
+                        = "#{friend.login}"
+                      %span.glyphicon.glyphicon-plus.pull-right.user_friend{:data=>{:user_id => friend.id}}
+        #pane2.tab-pane
+          - if @attah
+            %ul
+            -@attah.each do |attach|
+              %li
+                =link_to attach.attach_path.file.filename , attach.attach_path.url
+                %br
+                %small.text-muted
+                  = "#{attach.user.login}"
+                %br
+                %small.text-muted
+                  = "#{attach.created_at}"                
+                %br
+        #pane3.tab-pane
+          - if @links
+            %ul
+            -@links.each do |link|
+              %li
+                =link_to link.body
+                %br
+                %small.text-muted
+                  = "#{link.user.login}"
+                %br
+                %small.text-muted
+                  = "#{link.created_at}"
+                %br
   .footer
