fix null message

--- a/app/views/layouts/_rooms_list.html.haml
+++ b/app/views/layouts/_rooms_list.html.haml
@@ -110,7 +110,7 @@
             %ul
             -@links.each do |link|
               %li
-                =link_to link.body
+                =link_to link.body, link.body
                 %br
                 %small.text-muted
                   = "#{link.user.login}"
