--- a/app/views/users/invitations/edit.html.haml
+++ b/app/views/users/invitations/edit.html.haml
@@ -11,6 +11,16 @@
         = f.text_field :login
     .form-group
       %div
+        = f.label :firstname
+        %br/
+        = f.text_field :firstname
+    .form-group
+      %div
+        = f.label :lastname
+        %br/
+        = f.text_field :lastname
+    .form-group
+      %div
         = f.label :password
         %br/
         = f.password_field :password
