--- a/app/views/rooms/create.js.erb
+++ b/app/views/rooms/create.js.erb
@@ -1,4 +1,16 @@
 $('.left').remove();
 $('body').prepend("<%= escape_javascript render :partial => 'layouts/rooms_list'%>");
 $('#room_list').html("<%= escape_javascript render :partial => 'rooms/show_rooms_list'%>");
-$(".content").on("click",".delete_room",function(e){element_delete_room=e.currentTarget});$(".delete_room").confirm({text:"Are you sure you want to delete this room?",title:"Confirmation required",confirm:function(e){$.ajax({url:"../rooms/del/",type:"POST",beforeSend:function(e){e.setRequestHeader("X-CSRF-Token",$('meta[name="csrf-token"]').attr("content"))},data:{id:$(element_delete_room).data("id")},success:function(e){$(element_delete_room).parents("table.rooms_group").hide();$("a[room_id='"+$(element_delete_room).data("id")+"']").parents('li').hide();}})},confirmButton:"Yes I am",cancelButton:"No",post:false})
+$(".content").on("click",".delete_room",function(e){element_delete_room=e.currentTarget});$(".delete_room").confirm({text:"Are you sure you want to delete this room?",title:"Confirmation required",confirm:function(e){
+    $.ajax({
+        url: '../rooms/' +$(element_delete_room).data("id") ,
+        type: 'POST',
+        beforeSend: function(xhr) {xhr.setRequestHeader('X-CSRF-Token', $('meta[name="csrf-token"]').attr('content'))},
+        data: { _method: "DELETE",
+            id: $(element_delete_room).data("id") },
+        success: function(response){
+            $(element_delete_room).parents('table.rooms_group').hide();
+            $("a[room_id='"+$(element_delete_room).data("id")+"']").parents('li#room').hide();
+        }
+    });
+},confirmButton:"Yes I am",cancelButton:"No",post:false})
