fixed links in rigth panel,add scrolls, blocked line break when Enter key pressed, hide .pag panel

--- a/app/assets/stylesheets/all.css
+++ b/app/assets/stylesheets/all.css
@@ -534,6 +534,7 @@ div.server-upsell {
 .room_topic
 {
     background-color: #FFFFFF;
+    color: #808080;
     margin: 3px auto;
     text-align: center;
 }
