--- a/app/views/layouts/_rooms_list.html.haml
+++ b/app/views/layouts/_rooms_list.html.haml
@@ -2,7 +2,7 @@
   %h1.logo
     %a
       %img{:alt => "SBS", :src => "../img/logo.png"}
-  %nav.lobby-panel
+  %nav.lobby_friends
     %ul#tabs.tabs.ui-sortable
       %li#tab_lobby.selected
         %a.open{:href => "#{users_path}"}
@@ -12,6 +12,9 @@
         %a.open{:href => "#{rooms_path}"}
           %span.glyphicon.glyphicon-th-list>
           Lobby
+  %nav.lobby-panel
+    %ul#tabs.tabs.ui-sortable
+
       - if !@room_list.nil?
         - @room_list.each do |room|
           - if room.id==params[:id].to_i
@@ -93,29 +96,31 @@
                         = "#{friend.login}"
                       %span.glyphicon.glyphicon-plus.pull-right.user_friend{:data=>{:user_id => friend.id}}
         #pane2.tab-pane
-          - if @attah
-            %ul
-            -@attah.each do |attach|
-              %li
-                =link_to attach.attach_path.file.filename , attach.attach_path.url
-                %br
-                %small.text-muted
-                  = "#{attach.user.login}"
-                %br
-                %small.text-muted
-                  = "#{attach.created_at}"                
-                %br
+          .list2
+            - if @attah
+              %ul
+              -@attah.each do |attach|
+                %li
+                  =link_to attach.attach_path.file.filename , attach.attach_path.url
+                  %br
+                  %small.text-muted
+                    = "#{attach.user.login}"
+                  %br
+                  %small.text-muted
+                    = "#{attach.created_at}"
+                  %br
         #pane3.tab-pane
-          - if @links
-            %ul
-            -@links.each do |link|
-              %li
-                =link_to link.body, link.body
-                %br
-                %small.text-muted
-                  = "#{link.user.login}"
-                %br
-                %small.text-muted
-                  = "#{link.created_at}"
-                %br
+          .list2
+            - if @links
+              %ul
+              -@links.each do |link|
+                %li
+                  =link_to link.body.match(/(\b\w+:\/\/\w+((\.\w)*\w+)*\.\w{2,3}(\/\S*|\.\w*|\?\w*\=\S*)*)/), link.body
+                  %br
+                  %small.text-muted
+                    = "#{link.user.login}"
+                  %br
+                  %small.text-muted
+                    = "#{link.created_at}"
+                  %br
   .footer
