--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,4 @@
 = render 'layouts/rooms_list'
-- status_icon_styles = ["online", "offline", "away", "do_not_disturb"]
 .content
   .lobby-header
     #current_user
@@ -13,14 +12,15 @@
     = text_field_tag 'email', nil, :placeholder=>"E-mail", :type => 'email'
     = submit_tag 'Send invite', :class=>"btn btn-primary lobby-btn"
   %h3
-    Possible friends  
-  %table.rooms_group
-    - @possible_friends.each do |user|
-      %tr{:friend_id => user.id}
-        %td.name
-          .friend_photo
-            = image_tag avatar_url(user,50),:class => "avatar"
-          .friend_name
-          = link_to "#{user.login}", user_path(user.login)
-        %td.friend_action.add_friend
-          %span{:class => "glyphicon glyphicon-plus add_new_friend"}
+    Possible friends
+  .tableContainer
+    %table.rooms_group
+      - @possible_friends.each do |user|
+        %tr{:friend_id => user.id}
+          %td.name
+            .friend_photo
+              = image_tag avatar_url(user,50),:class => "avatar"
+            .friend_name
+            = link_to "#{user.login}", user_path(user.login)
+          %td.friend_action.add_friend
+            %span{:class => "glyphicon glyphicon-plus add_new_friend"}
