--- a/app/assets/stylesheets/lobby.css
+++ b/app/assets/stylesheets/lobby.css
@@ -672,3 +672,16 @@ span.glyphicon.glyphicon-remove:hover{
     position: absolute;
     width: 199px;
 }
+.blockUI.blockMsg.blockElement{
+    left: 45%;
+}
+.blockUI.blockMsg.blockElement p{
+    left: 50%;
+    color:white;
+    text-align: left;
+}
+.blockUI.blockMsg.blockElement img{
+    width: 50px;
+    height: 50px;
+    margin-left:50px;
+}
